# GARF

./: CLAUDE.md  README.md  eval.py  index.html  pyproject.toml
assembly/data/breaking_bad/: base.py  module.py  weighted.py
assembly/models/denoiser/: denoiser_base.py
assembly/models/denoiser/modules/: attention.py  denoiser_transformer.py
configs/model/: denoiser_flow_matching.yaml
scripts/: process_breakingbad.py
